syntax = "proto3";

message DataRequest {
    string title = 2;
    string short_desc = 3;
}

message Response {
    string id = 1;
    string title = 2;
    string short_desc = 3;
}

message DataResponse {
    repeated Response datas = 1;
}

message Empty {}

service DataService {
    rpc getAll(Empty) returns (DataResponse) {}
    rpc add(DataRequest) returns (Empty) {}
}